Add build script Fix app html file to add router-outlet Fix app-routing path to users module Fix webpack typeo for awesome-typescript-loader

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <h1>Hello World</h1>
 <br>
 <a routerLink="/">Home</a>
-<a routerLink="/users">Home</a>
+<a routerLink="/users">Users</a>
+<hr>
+<router-outlet></router-outlet>
